blog-manifest/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blog-app
  name: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
      - image: opeomotayo/blog-ci:87
        name: blog-app
