blog-manifest/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  rules:
  - host: blog.opeomotayo.net
    http:
      paths:
      - backend:
          service:
            name: blog-service
            port:
              number: 80
        path: /
        pathType: Prefix
